<resources>
    <string name="app_name">Asian Egypt Adventure</string>

    <string name="text_loading">loading</string>
    <string name="sourcebanner">image banner</string>

    <string name="button_start">button start</string>
    <string name="button_rules">button rules</string>
    <string name="button_settings">button settings</string>
    <string name="button_exit">button exit</string>

    <string name="button_theme_first">Actec</string>
    <string name="button_theme_second">Egypt</string>
    <string name="button_theme_three">Asian</string>

    <string name="button_level_easy">Easy</string>
    <string name="button_level_medium">Medium</string>
    <string name="button_level_hard">Hard</string>

    <string name="button_continue">button continue</string>
    <string name="text_volume">Volume</string>
    <string name="text_music">Music</string>
    <string name="button_music_on">button music on</string>
    <string name="button_music_off_check">button music off check</string>

    <string name="text_rules">In the \'\'Find Pair\'\' game, your objective is to match identical pairs of cards within a grid of face-down cards. You can flip over two cards at a time to reveal their hidden symbols. If the symbols on the cards match, they remain face-up, and you score points. However, if the symbols do not match, the cards are turned face-down again, and you must remember their positions for future turns. The game continues until all pairs have been successfully matched or until the time runs out, challenging your memory and concentration skills.\nBest of luck!</string>

    <string name="title_level">Level\nEASY</string>
    <string name="title_time">Time\n</string>
    <string name="title_steps">Steps\n</string>
    <string name="title_level_medium">Level\nMEDIUM</string>
    <string name="title_time_medium">Time\n</string>
    <string name="title_steps_medium">Steps\n</string>
    <string name="title_level_hard">Level\nHARD</string>
    <string name="title_time_hard">Time\n</string>
    <string name="title_steps_hard">Steps\n</string>

    <string name="button_score">button score</string>
    <string name="text_default_steps">0</string>
    <string name="default_win">WIN\n10000</string>
    <string name="pair_image">pair image</string>
    <string name="toast_win">Congratulations, you won!</string>
    <string name="background_game">background_game</string>
    <string name="image_game">image_game</string>
    <string name="start">Грати</string>
    <string name="title_offers">Best Offers</string>

</resources>