<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_fragment_games.xml"
    app:startDestination="@id/matchmaking_actec_game">

    <fragment
        android:id="@+id/matchmaking_actec_game"
        android:name="com.asiaegypt.adventu.ui.game.fragments.ActecFragment"
        android:label="@string/button_theme_first"
        tools:layout="@layout/fragment_actec" />

    <fragment
        android:id="@+id/matchmaking_egypt_game"
        android:name="com.asiaegypt.adventu.ui.game.fragments.EgyptFragment"
        android:label="@string/button_theme_second"
        tools:layout="@layout/fragment_egypt" />

    <fragment
        android:id="@+id/matchmaking_asian_game"
        android:name="com.asiaegypt.adventu.ui.game.fragments.AsianFragment"
        android:label="@string/button_theme_three"
        tools:layout="@layout/fragment_asian" />

</navigation>