<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuActivity">

    <ImageView
        android:id="@+id/background_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_loading"
        android:contentDescription="@string/background_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="270dp"
        android:layout_height="350dp"
        android:id="@+id/main_menu"
        android:background="@drawable/background_control_menu_bar"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/button_start"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_start"
            android:clickable="true"
            android:contentDescription="@string/button_start"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_rules"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rules"
            android:clickable="true"
            android:contentDescription="@string/button_rules"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start" />

        <ImageView
            android:id="@+id/button_settings"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_settings"
            android:clickable="true"
            android:contentDescription="@string/button_settings"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_rules" />

        <ImageView
            android:id="@+id/button_exit"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_exit"
            android:clickable="true"
            android:contentDescription="@string/button_exit"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title_offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_semibold"
        android:shadowColor="@color/black"
        android:shadowDx="-7"
        android:shadowDy="-15"
        android:shadowRadius="10"
        android:text="@string/title_offers"
        android:textColor="@color/white"
        android:textSize="@dimen/sp45"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/list_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_games"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp10"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>