<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_loading"
    tools:context=".ui.settings.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/background_control_settings_bar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_music"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/text_music"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_music_on"
            android:clickable="true"
            android:contentDescription="@string/button_music_on"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_music" />

        <ImageView
            android:id="@+id/button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_music_off_check"
            android:clickable="true"
            android:contentDescription="@string/button_music_off_check"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_music" />

        <TextView
            android:id="@+id/text_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/text_volume"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_off" />

        <SeekBar
            android:id="@+id/seekBarSound"
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:progressDrawable="@drawable/seekbar_background"
            android:thumb="@drawable/custom_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_volume" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/button_continue"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_continue"
        android:clickable="true"
        android:contentDescription="@string/button_continue"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/settings"
        app:layout_constraintStart_toStartOf="@+id/settings" />

</androidx.constraintlayout.widget.ConstraintLayout>