<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="@dimen/dp20">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_block_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background_game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_game"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_0" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/image_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fg_0"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/start"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>