<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_loading"
    tools:context=".LevelActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/background_control_level_bar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/button_level_easy"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_level_easy"
            android:clickable="true"
            android:contentDescription="@string/button_level_easy"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_level_medium"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_level_medium"
            android:clickable="true"
            android:contentDescription="@string/button_level_medium"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_level_easy" />

        <ImageView
            android:id="@+id/button_level_hard"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_level_hard"
            android:clickable="true"
            android:contentDescription="@string/button_level_hard"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_level_medium" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>