<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_egypt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_egypt_easy"
    tools:context=".ui.game.EgyptFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scene_game"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_bar_game" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_bar_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_level"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/irish_grover"
            android:text="@string/title_level"
            android:textAlignment="center"
            android:textColor="@color/yellow_light"
            android:textSize="@dimen/sp25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/status_wins"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_text_view"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_high_score"
            app:layout_constraintStart_toEndOf="@+id/text_level"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/irish_grover"
                android:text="@string/text_default_steps"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/sp32"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btn_high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_score"
            android:clickable="true"
            android:contentDescription="@string/button_score"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_play"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_play"
            android:clickable="true"
            android:contentDescription="@string/button_start"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>